# deriva

./: .env.example  .gitignore  ARCHITECTURE.MD  BENCHMARKING.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION.md  README.md  app.py  benchmarks.md  debug_appc.py  debug_derivation.py  debug_llm.py  fix_instruction.py  fix_queries.py  optimization_guide.md  pyproject.toml
.github/: SECURITY.md  SUPPORT.md  pull_request_template.md
.github/workflows/: ci.yml
deriva/adapters/: ruff.toml
deriva/adapters/archimate/: README.md  manager.py  models.py
deriva/adapters/ast/: manager.py
deriva/adapters/database/: README.md  __init__.py  db_tool.py  manager.py
deriva/adapters/database/data/: derivation_config.json  derivation_patterns.json  extraction_config.json  file_types.json  system_settings.json
deriva/adapters/database/scripts/: 1_schema.sql  2_seed_data.sql  3_extraction.sql  4_derivation.sql  7_llm_config_columns.sql  schema.sql
deriva/adapters/graph/: __init__.py  cache.py  manager.py  models.py
deriva/adapters/llm/: README.md  __init__.py  cache.py  manager.py  model_registry.py  models.py  providers.py  rate_limiter.py  retry.py  schemas.py
deriva/adapters/neo4j/: manager.py
deriva/adapters/repository/: __init__.py  manager.py  models.py
deriva/adapters/treesitter/: __init__.py  manager.py  models.py
deriva/adapters/treesitter/languages/: __init__.py  base.py  csharp.py  java.py  javascript.py  python.py
deriva/app/: README.md  app.py  progress.py
deriva/app/__marimo__/session/: app.py.json
deriva/cli/: README.md  cli.py  progress.py
deriva/cli/commands/: __init__.py  benchmark.py  config.py  repo.py  run.py
deriva/common/: __init__.py  cache_utils.py  chunking.py  json_utils.py  logging.py  types.py
deriva/modules/analysis/: __init__.py  consistency.py  cross_repo_analysis.py  deviation.py  fit_analysis.py  semantic_matching.py  stability_analysis.py  types.py
deriva/modules/derivation/: __init__.py  application_component.py  application_interface.py  application_service.py  base.py  business_actor.py  business_event.py  business_function.py  business_object.py  business_process.py  data_object.py  device.py  element_base.py  enrich.py  node.py  prep.py  prep_pagerank.py  system_software.py  technology_service.py
deriva/modules/derivation/refine/: __init__.py  base.py  circular_relationships.py  cross_layer.py  duplicate_elements.py  duplicate_relationships.py  graph_relationships.py  orphan_elements.py  relationship_consolidation.py  structural_consistency.py
deriva/modules/extraction/: __init__.py  ast_extraction.py  base.py  business_concept.py  classification.py  directory.py  directory_classification.py  edges.py  external_dependency.py  file.py  method.py  repository.py  technology.py  test.py  type_definition.py
deriva/services/: __init__.py  analysis.py  benchmarking.py  config.py  config_deviation.py  config_models.py  derivation.py  extraction.py  pipeline.py  session.py
tests/: conftest.py
tests/test_adapters/archimate/: test_models.py  test_xml_export.py
tests/test_adapters/ast/: test_ast_models.py
tests/test_adapters/database/: test_db_tool.py  test_manager.py
tests/test_adapters/graph/: test_manager.py  test_metamodel.py  test_models.py
tests/test_adapters/llm/: test_cache.py  test_manager.py  test_models.py  test_providers.py  test_rate_limiter.py  test_retry.py
tests/test_adapters/neo4j/: test_manager.py
tests/test_adapters/repository/: test_repo_manager.py  test_repo_models.py
tests/test_adapters/treesitter/: __init__.py  test_base.py  test_csharp.py  test_java.py  test_javascript.py  test_languages.py  test_manager.py  test_models.py  test_python.py
tests/test_app/: test_app.py  test_progress.py
tests/test_cli/: test_cli.py  test_progress.py
tests/test_common/: test_cache_utils.py  test_chunking.py  test_document_reader.py  test_file_utils.py  test_json_utils.py  test_llm_utils.py  test_ocel.py  test_types.py
tests/test_modules/analysis/: test_consistency.py  test_deviation.py  test_fit_analysis.py  test_stability_analysis.py  test_types.py
tests/test_modules/derivation/: conftest.py  test_application_component.py  test_application_service.py  test_base.py  test_business_actor.py  test_business_event.py  test_business_function.py  test_business_object.py  test_business_process.py  test_data_object.py  test_derivation_base.py  test_device.py  test_element_base.py  test_elements.py  test_enrich.py  test_node.py  test_prep.py  test_refine.py  test_system_software.py  test_technology_service.py
tests/test_modules/extraction/: test_ast_extraction.py  test_base.py  test_business_concept.py  test_classification.py  test_directory.py  test_directory_classification.py  test_edges.py  test_external_dependency.py  test_extraction_base.py  test_file.py  test_llm_extractors.py  test_method.py  test_nodes.py  test_technology.py  test_test_extraction.py  test_type_definition.py
tests/test_services/: test_benchmarking.py  test_config.py  test_config_models.py  test_config_service.py  test_derivation.py  test_derivation_service.py  test_extraction.py  test_extraction_service.py  test_pipeline.py  test_session.py
