[project]
name = "Deriva"
version = "0.6.1"
description = "Automatically generate ArchiMate enterprise architecture models from software repositories"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Steven Bytheway" }
]
license = { text = "AGPL-3.0" }
keywords = [
    "archimate",
    "enterprise-architecture",
    "code-analysis",
    "llm",
    "neo4j",
    "marimo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Core framework
    "marimo>=0.18.4",
    "pydantic>=2.12.5",
    # Databases
    "neo4j>=6.0.3",
    "duckdb>=1.4.3",
    # Graph & visualization
    "solvor>=0.5.3",
    # XML & schema
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    # HTTP & server
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    # Code parsing (multi-language AST)
    "tree-sitter>=0.24.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "types-lxml>=2025.3.30",
    "pre-commit>=4.5.1",
]

[project.urls]
Repository = "https://github.com/StevenBtw/Deriva"

[project.scripts]
deriva-cli = "cli:main"
deriva-app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deriva"]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 180
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "FA",     # flake8-future-annotations
    "Q",      # flake8-quotes
    "TID251", # banned-api - architectural boundary enforcement
]
ignore = [
    "E402",  # Module level import not at top - needed for conditional imports
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

# =============================================================================
# Architectural Boundaries (Enforced by Ruff TID251)
# =============================================================================
# Layer hierarchy (top to bottom):
#   CLI      → can import: services ONLY (PipelineSession is the API)
#   App      → can import: services ONLY (PipelineSession is the API)
#   Services → can import: adapters, modules, common
#   Adapters → can import: common only (NOT modules or services)
#   Modules  → can import: common only (NOT adapters or services)
#   Common   → can import: stdlib and third-party only
#
# Per-layer restrictions are defined in:
#   - deriva/cli/ruff.toml
#   - deriva/common/ruff.toml
#   - deriva/adapters/ruff.toml
#   - deriva/modules/ruff.toml
# =============================================================================

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# CLI should never be imported by any layer (it's a top-level entry point)
"deriva.cli" = { msg = "Architecture violation: cli is a top-level entry point and should not be imported" }
# Note: Layer-specific bans (adapters↔modules, etc.) are in per-directory ruff.toml files

[tool.ruff.lint.per-file-ignores]
# Tests can import from any layer for testing purposes
"tests/**/*.py" = ["E402", "TID251"]
"cli.py" = ["TID251"]
# Marimo app: allow long lines for UI code
"deriva/app/app.py" = ["E501"]
# Files with long strings (SQL, LLM prompts)
"deriva/modules/validation/__init__.py" = ["E402"]
"deriva/modules/derivation/__init__.py" = ["E402"]
"deriva/adapters/database/export_current_db.py" = ["E501"]
"deriva/modules/extraction/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
markers = [
    "integration: integration tests (run locally with -m integration)",
]

[tool.coverage.run]
source = ["deriva/adapters", "deriva/modules", "deriva/common", "deriva/services"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    # Marimo app (interactive UI, not unit testable)
    "deriva/app/*",
    # External adapters requiring infrastructure (Neo4j, Docker, etc.)
    "deriva/adapters/neo4j/*",
    "deriva/adapters/graph/*",
    "deriva/adapters/database/*",
    "deriva/adapters/archimate/*",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.environment]
python-version = "3.14"
