[project]
name = "Deriva"
version = "0.6.9"
description = "Deriva is a research project aimed at enabling digital architects by automating the derivation of enterprise architecture models. Deriva uses dual knowledge graphs, heuristics and LLM's."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "S. T. Grond", email = "steven@deriva.dev" }
]
license = { text = "AGPL-3.0" }
keywords = [
    "archimate",
    "enterprise-architecture",
    "code-analysis",
    "llm",
    "neo4j",
    "marimo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "lxml>=6.0.2",
    # Databases
    "duckdb>=1.4.3",
    "neo4j>=6.1.0",
    "sqlglot>=28.6.0",
    # UI
    "marimo>=0.19.4",
    # Code Analysis (tree-sitter)
    "tree-sitter>=0.24.6",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    # Document Parsing
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    # Graph Algorithms
    "solvor>=0.5.3",
    # LLM 
    "backoff>=2.2.1",
    "pydantic-ai>=1.44.0",
    # Utilities
    "diskcache>=5.6.3",
    "structlog>=24.0",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "types-lxml>=2025.3.30",
]

[project.urls]
Homepage = "https://deriva.dev"
Documentation = "https://deriva.dev/docs"
Repository = "https://github.com/StevenBtw/deriva"
Issues = "https://github.com/StevenBtw/deriva/issues"
Changelog = "https://github.com/StevenBtw/deriva/blob/main/CHANGELOG.md"

[project.scripts]
deriva-cli = "deriva.cli.cli:main"
deriva-app = "deriva.app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deriva"]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 180
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "FA",     # flake8-future-annotations
    "Q",      # flake8-quotes
    "TID251", # banned-api - architectural boundary enforcement
]
ignore = [
    "E402",  # Module level import not at top - needed for conditional imports
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

# =============================================================================
# Architectural Boundaries (Enforced by Ruff TID251)
# =============================================================================
# Layer hierarchy (top to bottom):
#   CLI      → can import: services ONLY (PipelineSession is the API)
#   App      → can import: services ONLY (PipelineSession is the API)
#   Services → can import: adapters, modules, common
#   Adapters → can import: common only (NOT modules or services)
#   Modules  → can import: common only (NOT adapters or services)
#   Common   → can import: stdlib and third-party only
#
# Per-layer restrictions are defined in:
#   - deriva/cli/ruff.toml
#   - deriva/common/ruff.toml
#   - deriva/adapters/ruff.toml
#   - deriva/modules/ruff.toml
# =============================================================================

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# CLI should never be imported by any layer (it's a top-level entry point)
"deriva.cli" = { msg = "Architecture violation: cli is a top-level entry point and should not be imported" }
# Note: Layer-specific bans (adapters↔modules, etc.) are in per-directory ruff.toml files

[tool.ruff.lint.per-file-ignores]
# Tests can import from any layer for testing purposes
"tests/**/*.py" = ["E402", "TID251"]
# Marimo app: allow long lines for UI code
"deriva/app/app.py" = ["E501"]
# Files with long strings (SQL, LLM prompts)
"deriva/modules/validation/__init__.py" = ["E402"]
"deriva/modules/derivation/__init__.py" = ["E402"]
"deriva/adapters/database/export_current_db.py" = ["E501"]
"deriva/modules/extraction/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
markers = [
    "integration: integration tests (run locally with -m integration)",
]

[tool.coverage.run]
source = ["deriva/adapters", "deriva/modules", "deriva/common", "deriva/services", "deriva/cli"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    # Marimo app (interactive UI, not unit testable)
    "deriva/app/*",
    # External adapters requiring infrastructure (Neo4j, Docker, etc.)
    "deriva/adapters/neo4j/*",
    "deriva/adapters/graph/*",
    "deriva/adapters/database/*",
    "deriva/adapters/archimate/*",
    # Refine steps requiring graph infrastructure
    "deriva/modules/derivation/refine/graph_relationships.py",
    # Benchmarking service (requires LLMs/databases for full testing)
    "deriva/services/benchmarking.py",
    # Analysis modules (cross-repo, semantic matching) - require full pipeline integration
    "deriva/services/analysis.py",
    "deriva/modules/analysis/cross_repo_analysis.py",
    "deriva/modules/analysis/semantic_matching.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.environment]
python-version = "3.14"
